adjustments regarding melee attacks and leaping